--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -27,6 +27,11 @@
         <p>IOT  Devices in Aviation</p>
         <p><a class="btn btn-default" href="https://betsol.com/2016/07/the-top-3-iot-devices-in-aviation-right-now/">Learn more &raquo;</a></p>
     </div>
+    <div class="col-md-4">
+        <h2>IOT</h2>
+        <p>Hey Sandeep... We better win this... xD</p>
+        <p><a class="btn btn-default" href="https://betsol.com/2016/07/the-top-3-iot-devices-in-aviation-right-now/">Learn more &raquo;</a></p>
+    </div>
     
 
 </div>
